--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ jupyter_core==5.8.1
 jupyter_server==2.16.0
 nbconvert==7.16.6
 nbformat==5.10.4
+scikit-learn==1.3.2
+joblib==1.3.2
+numpy==1.24.3
+scipy==1.11.4
+threadpoolctl==3.2.0
