--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Experiment Management
+hydra-core==1.3.2
+mlflow==2.7.1
+omegaconf==2.3.0
+
+# Existing requirements
 matplotlib==3.5.2
 matplotlib-inline==0.1.7
 seaborn==0.13.2
@@ -18,6 +24,5 @@ nbconvert==7.16.6
 nbformat==5.10.4
 scikit-learn==1.3.2
 joblib==1.3.2
-numpy==1.24.3
 scipy==1.11.4
 threadpoolctl==3.2.0
