--- a/src/UNet/config.yaml
+++ b/src/UNet/config.yaml
@@ -14,14 +14,20 @@ model:
 # Training configuration
 training:
   batch_size: 32
-  epochs: 100
-  learning_rate: 1e-4
-  save_interval: 10
+  epochs: 500
+  learning_rate: 2e-5
+  save_interval: 100
   use_dummy: false
+  # Early stopping configuration
+  early_stopping:
+    enabled: true
+    patience: 20  # エポック数
+    min_delta: 1e-6  # 最小改善量
+    restore_best_weights: true  # 最良の重みを復元
 
 # Data configuration  
 data:
-  train_data: "data/Datasets/overfitting_dataset_cond_3.npz"
+  train_data: "/data/Datasets/overfitting_dataset.npz"  # 絶対パス使用
   val_data: null  # If null, will split from train_data
   val_split_ratio: 0.2
 
