--- a/src/config.yaml
+++ b/src/config.yaml
@@ -9,15 +9,21 @@ model:
   diffusion_hidden_dim: 256
   diffusion_num_layers: 4
   input_dim: 2
-  lstm_hidden_dim: 128
-  lstm_num_layers: 2
   moving_average_window: 10
   num_diffusion_steps: 1000
+  transformer_inner_dim: 256
+  transformer_num_heads: 8
+  transformer_num_layers: 4
 training:
+  augment_after_epoch: 20
   batch_size: 32
   clip_grad_norm: 1.0
-  learning_rate: 0.001
-  num_epochs: 100
-  scheduler_T_max: 200
+  lr_decomposer: 0.0001
+  lr_high_freq: 0.0005
+  lr_low_freq: 0.001
+  num_epochs: 200
+  scheduler_T_0: 20
+  scheduler_T_mult: 2
   scheduler_eta_min: 1.0e-06
+  warmup_epochs: 10
   weight_decay: 0.0001
