SQLiteで実験を管理する仕組みを導入

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   app:
     build: .
     container_name: PersonalizedExampleGeneration_dev
+    tty: true
     ports:
       - "8888:8888"   # Jupyter
       - "2718:2718"   # Marimo
