feat:軌道データのスキル指標を計算するクラスを追加

--- a/src/PredictiveLatentSpaceNavigationModel/DataPreprocess/data_preprocess_default_config.yaml
+++ b/src/PredictiveLatentSpaceNavigationModel/DataPreprocess/data_preprocess_default_config.yaml
@@ -9,6 +9,7 @@ pre_process:
 analysis:
   anova_skill_metrics: true
   factorize_skill_metrics: true
+  standardize_metrics: true
 
 data:
   raw_data_dir: "data/RawDatas/"
