--- a/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_091048_style_skill_separation_orthogonal_test_1.yaml
+++ b/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_091048_style_skill_separation_orthogonal_test_1.yaml
@@ -47,7 +47,7 @@ model:
       start_epoch: 81
       end_epoch: 110
       start_val: 0.0
-      end_val: 0.1
+      end_val: 1.0
     contrastive_loss:
       schedule: 'linear'
       start_epoch: 111
@@ -59,19 +59,19 @@ model:
       start_epoch: 131
       end_epoch: 150
       start_val: 0.0
+      end_val: 0.1
+    style_classification_loss:
+      schedule: 'linear'
+      start_epoch: 151
+      end_epoch: 170
+      start_val: 0.0
       end_val: 0.5
-#    style_classification_loss:
-#      schedule: 'linear'
-#      start_epoch: 151
-#      end_epoch: 170
-#      start_val: 0.0
-#      end_val: 0.5
-#    skill_regression_loss:
-#      schedule: 'linear'
-#      start_epoch: 161
-#      end_epoch: 170
-#      start_val: 0.0
-#      end_val: 0.5
+    skill_regression_loss:
+      schedule: 'linear'
+      start_epoch: 161
+      end_epoch: 170
+      start_val: 0.0
+      end_val: 0.5
 
 # 学習設定
 training:
