--- a/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_161249_style_skill_separation_orthogonal_test_1.yaml
+++ b/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_161249_style_skill_separation_orthogonal_test_1.yaml
@@ -96,8 +96,8 @@ training:
   restore_best_weights: true
   
   # モデル保存
-  save_best_model: false
-  save_checkpoints: false
+  save_best_model: true
+  save_checkpoints: true
   checkpoint_interval: 20
   verbose: true
 
