--- a/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_144636_style_skill_separation_orthogonal_test_1.yaml
+++ b/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/backups/20250918_144636_style_skill_separation_orthogonal_test_1.yaml
@@ -15,8 +15,8 @@ model:
   # 基本パラメータ
   input_dim: 6  # HandlePos, Vel, Acc (x,y)
   seq_len: 100  # target_seq_len from preprocessing
-  d_model: 1024  # CLAUDE_ADDED: 768から512に縮小してNaN回避
-  n_heads: 16
+  d_model: 768  # CLAUDE_ADDED: 768から512に縮小してNaN回避
+  n_heads: 8
   n_encoder_layers: 6
   n_decoder_layers: 6
   dropout: 0.1
@@ -77,9 +77,8 @@ model:
 training:
   num_epochs: 200
   batch_size: 16
-  learning_rate: 0.00005  # CLAUDE_ADDED: より小さな学習率でNaN回避
+  learning_rate: 0.0001
   weight_decay: 0.00005
-  gradient_clip_norm: 1.0  # CLAUDE_ADDED: グラディエントクリッピング追加
   
   optimizer: "AdamW"
   scheduler: "CosineAnnealingWarmRestarts"
@@ -91,13 +90,13 @@ training:
   early_stopping: true
   patience: 60
   min_delta: 0.0005
-  monitor: "val_total_loss"
+  monitor: "val_reconstruction_loss"
   mode: "min"
   restore_best_weights: true
   
   # モデル保存
-  save_best_model: false
-  save_checkpoints: false
+  save_best_model: true
+  save_checkpoints: true
   checkpoint_interval: 20
   verbose: true
 
