--- a/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/base_config/Normal/style_skill_separation_baseline_test_1.yaml
+++ b/src/PredictiveLatentSpaceNavigationModel/TransformerBaseEndToEndVAE/configs/base_config/Normal/style_skill_separation_baseline_test_1.yaml
@@ -1,7 +1,7 @@
 # Skill-Style Separation VAE Training Configuration
 
 experiment:
-  name: "improved_style_skill_separation_model_skill_baseline_test"
+  name: "style_skill_separation_model_skill_baseline_test"
   description: "スキル指標を用いたスタイル・スキル分離VAE学習実験 - 熟達多様体形成"
   priority: 1
   tags: ["skill_metrics", "style_separation", "prototype_classification", "transformer_vae"]
@@ -22,71 +22,56 @@ model:
   dropout: 0.1
 
   # 潜在空間次元
-  style_latent_dim: 32
-  skill_latent_dim: 32
+  style_latent_dim: 16
+  skill_latent_dim: 16
 
   # 被験者数 (学習データの被験者数)
   n_subjects: 6  # 要確認: 実際のデータに合わせて調整
   
   # 損失重み
   loss_schedule_config:
-    beta_style: # スタイル空間専用のKL損失
-      schedule: 'constant'
-      val: 0.0
-    beta_skill: # スキル空間専用のKL損失（より弱く）
-      schedule: 'constant'
-      val: 0.0
+    beta_style:  # スタイル空間専用のKL損失
+      schedule: 'linear'
+      start_epoch: 40
+      end_epoch: 70
+      start_val: 0.0
+      end_val: 0.0001
+    beta_skill:  # スキル空間専用のKL損失（より弱く）
+      schedule: 'linear'
+      start_epoch: 40
+      end_epoch: 70
+      start_val: 0.0
+      end_val: 0.0001
     orthogonal_loss:
-      schedule: 'constant'
-      val: 0.0
+      schedule: 'linear'
+      start_epoch: 81
+      end_epoch: 110
+      start_val: 0.0
+      end_val: 0.4
     contrastive_loss:
-      schedule: 'constant'
-      val: 0.0
+      schedule: 'linear'
+      start_epoch: 111
+      end_epoch: 130
+      start_val: 0.0
+      end_val: 0.25
     manifold_loss:
-      schedule: 'constant'
-      val: 0.0
-#    beta_style:  # スタイル空間専用のKL損失
-#      schedule: 'linear'
-#      start_epoch: 40
-#      end_epoch: 70
-#      start_val: 0.0
-#      end_val: 0.0001
-#    beta_skill:  # スキル空間専用のKL損失（より弱く）
-#      schedule: 'linear'
-#      start_epoch: 40
-#      end_epoch: 70
-#      start_val: 0.0
-#      end_val: 0.0001
-#    orthogonal_loss:
-#      schedule: 'linear'
-#      start_epoch: 81
-#      end_epoch: 110
-#      start_val: 0.0
-#      end_val: 0.1
-#    contrastive_loss:
-#      schedule: 'linear'
-#      start_epoch: 111
-#      end_epoch: 130
-#      start_val: 0.0
-#      end_val: 0.25
-#    manifold_loss:
-#      schedule: 'linear'
-#      start_epoch: 131
-#      end_epoch: 150
-#      start_val: 0.0
-#      end_val: 0.5
-#    style_classification_loss:
-#      schedule: 'linear'
-#      start_epoch: 151
-#      end_epoch: 170
-#      start_val: 0.0
-#      end_val: 0.5
-#    skill_regression_loss:
-#      schedule: 'linear'
-#      start_epoch: 161
-#      end_epoch: 170
-#      start_val: 0.0
-#      end_val: 0.5
+      schedule: 'linear'
+      start_epoch: 131
+      end_epoch: 150
+      start_val: 0.0
+      end_val: 0.5
+    style_classification_loss:
+      schedule: 'linear'
+      start_epoch: 151
+      end_epoch: 170
+      start_val: 0.0
+      end_val: 0.5
+    skill_regression_loss:
+      schedule: 'linear'
+      start_epoch: 161
+      end_epoch: 170
+      start_val: 0.0
+      end_val: 0.5
 
 # 学習設定
 training:
